<resources>
    <string name="app_name">My App Portofolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="btn_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="btn_scores_app">SCORES APP</string>
    <string name="btn_library_app">LIBRARY APP</string>
    <string name="btn_build_it_bigger">BUILD IT BIGGER</string>
    <string name="btn_xyz_reader">XYZ READER</string>
    <string name="btn_capstone_my_own_app">CAPSTONE:MY OWN APP</string>
</resources>
