<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nbs.myappportofolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:layout_marginBottom="30dp"/>
    <Button
        android:id="@+id/btn_spotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_spotify_streamer"
        android:background="@drawable/selector_button_orange"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_scores_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scores_app"
        android:background="@drawable/selector_button_orange"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_library_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_library_app"
        android:background="@drawable/selector_button_orange"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_build_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_it_bigger"
        android:background="@drawable/selector_button_orange"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_xyz_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_xyz_reader"
        android:background="@drawable/selector_button_orange"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone_my_own_app"
        android:background="@drawable/selector_button_pink"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"/>
</LinearLayout>
